[package]
name = "weather_forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
exitfailure = "0.5.1"
reqwest = {version = "0.11.23", features =["json"]}
serde = "1.0.114"
serde_json = "1.0.111"
serde_derive = "1.0.194"
tokio = {version = "1.35.1", features = ["full"]}